src/styles/Portfolio.css
.portfolio-container {
  display: grid;
  grid-template-areas: 
    "nav"
    "portfolio-content-wrapper"
    "footer";
  grid-template-rows: .1fr 3fr .3fr;
  grid-template-columns: 1fr;
  grid-row-gap: 1rem;
  grid-column-gap: 1rem;
  height: 100vh;
  width: 100vw;
}

@media (min-width: 681px) {
  .portfolio-content-wrapper {
    grid-area: portfolio-content-wrapper;
    display: grid;
    grid-template-areas: 
      "header header header"
      "summary summary summary"
      "cta cta cta"
      "project1 project2 project3";
    grid-template-rows: .3fr .4fr .4fr 1.5fr;
    grid-template-columns: 1fr 1fr 1fr;
    grid-row-gap: 1rem;
    grid-column-gap: 1rem;
    max-width: 800px;
    justify-self: center;
    font-family: Arial, Helvetica, sans-serif ;
  }
}


@media (max-width: 680px) {
  .portfolio-content-wrapper {
    grid-area: portfolio-content-wrapper;
    display: grid;
    grid-template-areas: 
      "header"
      "summary"
      "cta"
      "project1"
      "project2"
      "project3";
    grid-template-rows: .3fr .4fr .4fr;
    grid-template-columns: 1fr;
    grid-row-gap: 1rem;
    grid-column-gap: 1rem;
    max-width: 90%;
    justify-self: center;
    font-family: Arial, Helvetica, sans-serif;
  }
}

.cwf-logo {

}

.project-link {
  text-decoration: none;
  color: white;
}

.portfolio-header-container {
  grid-area: header;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

.portfolio-header {
  font-weight: 500;
  font-size: 3.2rem;
  margin-top: 5px;
  margin-bottom: 5px;
  align-items: center;
}

.portfolio-summary-container {
  grid-area: summary;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.portfolio-summary {
  font-weight: 400;
  margin-top: 7px;
  margin-bottom: 7px;
  font-size: 1.10rem;
}

.portfolio-cta-container {
  grid-area: cta;
  text-align: center;
}

.portfolio-cta {
  grid-area: cta;
  text-align: center;
  font-size: 2.25rem;
}

.portfolio-project-card-container {
  text-align: center;
  background-color: rgb(75, 75, 75);
  border-radius: 5px;
  height: 200px;
  max-width: 200px;
  justify-self: center;
  align-self: center;
}

.portfolio-project-card-header {

}

#project1 {
  grid-area: project1;
}

#project2 {
  grid-area: project2;
}

#project3 {
  grid-area: project3;
}

@media (min-width: 681px) {
  .portfolio-project-card-container {
    justify-self:center
  }
}

@media (max-width: 620px) {
  .portfolio-header-container {
    flex-direction: column;
  }

  .portfolio-header {
    font-weight: 500;
    font-size: 2.5rem;
    margin-top: 5px;
    margin-bottom: 5px;
    align-items: center;
  }

  .portfolio-cta {
    margin-top: 5px;
    margin-bottom: 15px;
  }
}

